# old-SepHash

./: .gitignore  CMakeLists.txt  README  a.out  cal_seg_fp.cc  collect.py  compile_search.sh  git_commit.sh  index.html  run.sh  search.s  ser_cli.sh  sync.sh
include/: aiordma.h  alloc.h  clevel.h  cluster_hash.h  common.h  config.h  dhash.h  hash.h  kv_block.h  kv_trait.h  linear_hash.h  perf.h  plush.h  plush_seq.h  plush_xtimes.h  race.h  race_a.h  race_idle.h  race_op.h  race_share_dir.h  race_wo_op.h  rdma_bench.h  search.h  sephash.h  split_hash.h  split_hash_idle.h  split_op.h  split_op2.h  split_op2a.h  split_op2b.h  split_op2c.h
src/: aiordma.cc  clevel.cc  cluster_hash.cc  dhash.cc  hash.cc  plush.cc  plush_seq.cc  plush_xtimes.cc  race.cc  race_a.cc  race_idle.cc  race_op.cc  race_share_dir.cc  race_wo_op.cc  rdma_bench.cc  search.cc  sephash.cc  split_2pa.cc  split_batch.cc  split_hash.cc  split_hash_idle.cc  split_inline_dep.cc  split_op.cc  split_op2.cc  split_op2a.cc  split_op2b.cc  split_op2c.cc  split_search_base.cc  split_search_fptable.cc
test/: bench.cc  ser_cli.cc  sort.cc
